fix: hide scrollbar on tab nav in topbar

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -121,4 +121,11 @@
   body {
     @apply bg-background text-foreground;
   }
+  .scrollbar-hide {
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
+  .scrollbar-hide::-webkit-scrollbar {
+    display: none;
+  }
 }
